# MAI

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: release.yml
backend/: .env.example  mai-backend.spec  mai_backend_main.py  requirements.txt
backend/app/: __init__.py  config.py  db.py  engine.py  event_bus.py  ids.py  init_db.py  llm.py  main.py  migrate_api_models.py  migrate_personas.py  migrate_settings.py  models.py  schemas.py  seed.py  trace.py
backend/tests/: conftest.py  test_engine.py  test_health.py  test_in_flight.py  test_llm_adapter.py  test_masquerade.py  test_migrate_personas.py  test_persona_instances_api.py  test_room_lifecycle.py  test_scribe_facilitator.py  test_smoke.py  test_templates.py  test_uploads.py  test_verdict.py  test_visibility.py
docs/: desktop_tauri.md  product_design.md  progress.md  technical_design.md  usage.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  i18n.tsx  main.tsx  store.ts  styles.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: MarkdownBlock.tsx  StatusPill.tsx
frontend/src/pages/: DashboardPage.tsx  RoomPage.tsx  SettingsPage.tsx  TemplatesPage.tsx
frontend/src/pages/room/: Composer.tsx  MembersSidebar.tsx  MessageList.tsx  PhaseExitBanner.tsx  RightPanel.tsx  RoomListSidebar.tsx  (+2 more)
infra/: docker-compose.yml
scripts/: build-sidecar.ps1  dev.ps1  package-tauri.ps1  package.ps1
(+7 files in other folders)
