[package]
name = "mai-desktop"
version = "0.1.0"
description = "Desktop shell for MAI"
authors = ["MAI"]
edition = "2021"
default-run = "mai-desktop"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
