[package]
name = "mai-desktop"
version = "0.3.3"
description = "Desktop shell for MAI"
authors = ["MAI"]
edition = "2021"
default-run = "mai-desktop"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
